app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
@import "bootstrap-sprockets";
@import "bootstrap";
@import "posts.scss";


@import "nav.scss";
@import "form.scss";
@import "static.scss";
@import "gritter";
@import "bourbon";


html {
  height: 100%;
  /*scroll-behavior: smooth;*/
}
body {
    height: 100%;
    background: url("https://mississaugajudo.s3.us-east-2.amazonaws.com/guy-poses.jpg") no-repeat center center fixed;
    /*background: url('judo-grip.jpg') no-repeat center center fixed;*/
    -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
    font-family: sans-serif;
    margin-top: 80px;
    padding: 30px;
}
.navbar-brand {
  display: inline;
  width:150px;
  font-size: 24px;
}
.navbar-brand > img {
  max-height: 90px;
  margin-top: 0px;
  display: inline;
}
.navbar-default {
  background-color: rgba(246, 233, 233, 0.4);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 80px;
  display: flex;
  align-items: center;
  box-shadow: 0 0 25px 0 black;
  padding: 20px;
}
.navbar {
    height: 110px;
}
.nav li a {
  color: black !important;
  text-decoration: none;
  font-family: 'Oswald', sans-serif;
  text-transform: uppercase;
  font-weight: 800;
}
.nav li a:hover {
  color: grey !important;
}
.navbar-nav > li > .dropdown-menu a:hover {
  /*background-color: rgba(246, 233, 233, 0.9);*/
  color: grey !important;
  background-color: transparent !important;
}
.navbar-nav > .open a:focus{
  background-color: transparent !important;
}
h1:focus, h3:focus {
  outline:0;
}

/************ Animation on page change **************/

.animate-in {
    -webkit-animation: fadeIn .5s ease-in;
    animation: fadeIn .5s ease-in;
}

.animate-out {
    -webkit-transition: opacity .5s;
    transition: opacity .5s;
    opacity: 0;
}

@-webkit-keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

@keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

/************ Animation on page change **************/


/* ----------  @media only screen  --------------- */
/* ----------  -----------------  --------------- */
/* ----------  -----------------  --------------- */
/* ----------  -----------------  --------------- */

@media only screen and (max-width: 767px) {
  
  body {
    background-attachment:initial; 
  }

}

